--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,8 @@
             },
             {
                 src: 'plugin/highlight/highlight.js', async: true, callback: function () {
-                hljs.initHighlightingOnLoad();
+                // noinspection Annotator
+                    hljs.initHighlightingOnLoad();
             }
             },
             {src: 'plugin/zoom-js/zoom.js', async: true},
