Fixed incorrect content.

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                       <li><strong class="dimtext">Steps 5, 6, 7</strong> recur flipping <span class="color1">Survivor 1</span> and <span class="color1">Survivor 2</span> as <em class="color1">From</em> and <em class="color1">To</em>.</li>
                       <li> Done until <span class="color2">Age</span> threshold (default = <span class="color3">15</span>) reached for any live object.</li>
                       <li>Next GC, live objects from the current <span class="color1">Survivor</span> with <span class="color2">Age</span> above threshold, move to <strong class="color1">Tenured</strong>.</li>
-                      <li><strong class="dimtext">Steps 5, 6, 7, 8 and 9</strong> recur until a need for a full GC.</li>
+                      <li><strong class="dimtext">Steps 5 - 10</strong> recur until a need for a full GC.</li>
                     </ol>
                 </span>
               </td>
