--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <ol start="4">
                   <li><strong class="color2">Method Area</strong> - <strong class="dimtext">Shared</strong>:
                     <ul>
-                      <li>stores the <span class="color2">runtime constant pool</span>, field and method info., static variables and method bytecodes.</li>
+                      <li>stores the <span class="color2">runtime constant pool</span>, field and method info., static variables and method bytecode.</li>
                       <li>Oracle Hotspot VM co-mingled this area with Permanent Generation (PermGen).</li>
                       <li>garbage collection for this area is not required by the JVM specification.</li>
                     </ul>
@@ -1249,7 +1249,7 @@
             <li><span class="color2">Maximum heap size</span> defaults to <span class="color3">1/4th</span> of physical memory.</li>
             <li>Default tiered compiler with <strong class="color2">C1</strong> and <strong class="color2">C2</strong> code caches.
               <ul>
-                <li><span class="color2">C1</span> pre-compiles and optimizes non-profilable (non-dynamic) code.</li>
+                <li><span class="color2">C1</span> pre-compiles and optimizes non-profiled (non-dynamic) code.</li>
                 <li><span class="color2">C2</span> profiles code and defers optimizations.</li>
               </ul>
             </li>
