Fixed an eysore '.' that escaped a blockquote

--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
           <span class="color1" style="font-size: 1.2em">
             The G1GC (<strong class="color2">Garbage First Garbage Collector</strong>), was designed and developed to resolve the above.
             <br/>
-            <blockquote class="color3" style="font-size: 0.8em; text-align: center">G1GC is the new default collector since JDK 9</blockquote>.
+            <blockquote class="color3" style="font-size: 0.8em; text-align: center">G1GC is the new default collector since JDK 9.</blockquote>
           </span>
         </span>
       </section>
