Added a new logging slide. Fixed a Generational GC image.

--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,36 @@
         Recommended slide deck: <a href="https://www.slideshare.net/PoonamBajaj5/lets-learn-to-talk-to-gc-logs-in-java-9">https://www.slideshare.net/PoonamBajaj5/lets-learn-to-talk-to-gc-logs-in-java-9</a>.
         </span></span>
       </section>
+      
+`      <!-- G1GC - Common tags -->
+      <section>
+        <h2>G1GC - Common tags</h2>
+        <span style="font-size:0.45em;text-align:left;">Some common tags used in logging:</span>
+        <table width="60%" style="font-size: 0.4em">
+          <tr><td width="50%" style="text-align: right">Region</td><td><code>region</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Liveness </td><td><code>liveness</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Marking </td><td><code>marking</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Remembered Set </td><td><code>remset</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Ergonomics </td><td><code>ergo</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Class Histogram </td><td><code>classhisto</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Safepoint </td><td><code>safepoint</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Task </td><td><code>task</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Heap </td><td><code>heap</code></td></tr>
+          <tr><td width="50%" style="text-align: right">JNI </td><td><code>jni</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Promotion(Parallel) Local Allocation Buffer</td><td><code>plab</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Promotion </td><td><code>promotion</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Reference </td><td><code>ref</code></td></tr>
+          <tr><td width="50%" style="text-align: right">String Deduplication </td><td><code>stringdedup</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Statistics</td><td><code>stats</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Tenuring </td><td><code>age</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Thread Local Allocation Buffer </td><td><code>tlab</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Metaspace </td><td><code>metaspace</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Humongous Allocation </td><td><code>alloc</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Refinement </td><td><code>refine</code></td></tr>
+          <tr><td width="50%" style="text-align: right">Humongous </td><td><code>humongous</code></td></tr>
+          <tr><td width="50%" style="text-align: right">String Symbol Table </td><td><code>stringtable</code></td></tr>
+        </table>
+      </section>
 
     </section>
   
