Fixed an extraneous quote.

--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
         </span></span>
       </section>
       
-`      <!-- G1GC - Common tags -->
+      <!-- G1GC - Common tags -->
       <section>
         <h2>G1GC - Common tags</h2>
         <span style="font-size:0.45em;text-align:left;">Some common tags used in logging:</span>
